fix gap list logos

--- a/figmaBI/scss/components/_listLogos.scss
+++ b/figmaBI/scss/components/_listLogos.scss
@@ -15,7 +15,7 @@
     
     @media (min-width: bp.$tablet) {
         display: flex;
-        gap: 40px;
+        gap: 39px;
         max-width: 616px;
         margin-bottom: 140px;
     }
